--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,13 +1,12 @@
+*{
+	box-sizing: border-box;
+}
+
 h1
 {
 	text-align: center;
 }
-.row
-{
-	border: 2px;
-	padding: 10px;
-	margin : 10px;
-}
+
 
 #chicken
 {
@@ -46,4 +45,33 @@ padding:5px;
 background-color: gray;
 border: 2px;
 padding:5px;
+}
+
+.row
+{
+	width : 100%;
+	border: 2px;
+	padding: 10px;
+	margin : 10px;
+}
+
+@media(min-width: 992px)
+{
+	.col-md-4{
+		width: 33%
+	}
+}
+
+@media(min-width:768px) and (max-width: 991px)
+{
+	.col-sm-6{
+		width:50%;
+	}
+}
+
+@media(max-width: 767px )
+{
+	.col-xs-12{
+		width:100%;
+	}
 }
