--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -24,11 +24,11 @@ padding:5px;
 #beef
 {
 	border:1px;
-	background-color:ff0000;
+	background-color:#ff1a1a;
 	position: absolute;
 	text-align: center;
 }
-.beef
+.beef{
 background-color: gray;
 border: 2px;
 padding:5px;
@@ -47,17 +47,12 @@ border: 2px;
 padding:5px;
 }
 
-.row
-{
-	width : 100%;
-	border: 2px;
-	padding: 10px;
-	margin : 10px;
-}
+
 
 @media(min-width: 992px)
 {
 	.col-md-4{
+		float:left;
 		width: 33%
 	}
 }
@@ -65,13 +60,19 @@ padding:5px;
 @media(min-width:768px) and (max-width: 991px)
 {
 	.col-sm-6{
+		float:left;
 		width:50%;
+	}
+	.col-sm-12{
+		float:left;
+		width:100%;
 	}
 }
 
 @media(max-width: 767px )
 {
 	.col-xs-12{
+		float:left;
 		width:100%;
 	}
 }
