--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,5 +1,7 @@
 *{
 	box-sizing: border-box;
+	font-family: Calibiri;
+
 }
 
 h1
@@ -10,41 +12,47 @@ h1
 
 #chicken
 {
-	border:1px;
+	border:1px solid black;
 	background-color:#ff8080;
 	position: absolute;
 	text-align: center;
+	padding: 2px;
 }
 .chicken
 {
 background-color: gray;
-border: 2px;
+border: 3px solid black;
 padding:5px;
+margin: 10px
 }
 #beef
 {
-	border:1px;
+	border:1px solid black;
 	background-color:#ff1a1a;
 	position: absolute;
 	text-align: center;
+	padding: 2px
 }
 .beef{
 background-color: gray;
-border: 2px;
+border: 3px solid black;
 padding:5px;
+margin: 10px;
 }
 #sushi
 {
-	border:1px;
+	border:1px solid black;
 	background-color:#ffd9b3;
 	position: absolute;
 	text-align: center;
+	padding: 2px;
 }
 .sushi
 {
 background-color: gray;
-border: 2px;
+border: 3px solid black;
 padding:5px;
+margin: 10px;
 }
 
 
@@ -54,6 +62,7 @@ padding:5px;
 	.col-md-4{
 		float:left;
 		width: 33%
+		
 	}
 }
 
@@ -62,10 +71,12 @@ padding:5px;
 	.col-sm-6{
 		float:left;
 		width:50%;
+		
 	}
 	.col-sm-12{
 		float:left;
 		width:100%;
+		
 	}
 }
 
@@ -74,5 +85,6 @@ padding:5px;
 	.col-xs-12{
 		float:left;
 		width:100%;
+
 	}
 }
