--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,6 +1,7 @@
 *{
 	box-sizing: border-box;
 	font-family: Calibiri;
+	font-weight: bold;
 
 }
 
@@ -17,6 +18,7 @@ h1
 	position: absolute;
 	text-align: center;
 	padding: 2px;
+
 }
 .chicken
 {
