--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -9,53 +9,56 @@ h1
 {
 	text-align: center;
 }
-
+.section
+{
+	position: relative;
+}
 
 #chicken
 {
 	border:1px solid black;
 	background-color:#ff8080;
 	position: absolute;
+	top:-8px;
+	right:2px;
 	text-align: center;
 	padding: 2px;
+	margin: 10px;
 
 }
-.chicken
+p
 {
 background-color: gray;
 border: 3px solid black;
 padding:5px;
-margin: 10px
+margin: 10px;
+
+
 }
 #beef
 {
 	border:1px solid black;
 	background-color:#ff1a1a;
 	position: absolute;
+	top:-8px;
+	right:2px;
 	text-align: center;
-	padding: 2px
+	padding: 2px;
+	margin: 10px;
 }
-.beef{
-background-color: gray;
-border: 3px solid black;
-padding:5px;
-margin: 10px;
-}
+
 #sushi
 {
 	border:1px solid black;
 	background-color:#ffd9b3;
 	position: absolute;
+	top:-8px;
+	right:2px;
 	text-align: center;
 	padding: 2px;
+	margin: 10px;
 }
-.sushi
-{
-background-color: gray;
-border: 3px solid black;
-padding:5px;
-margin: 10px;
-}
+
 
 
 
@@ -64,6 +67,7 @@ margin: 10px;
 	.col-md-4{
 		float:left;
 		width: 33%
+
 		
 	}
 }
