--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -24,6 +24,7 @@ h1
 	text-align: center;
 	padding: 2px;
 	margin: 10px;
+	width:100px;
 
 }
 p
@@ -33,6 +34,7 @@ border: 3px solid black;
 padding:5px;
 margin: 10px;
 padding-top: 25px;
+height:150px;
 
 }
 #beef
@@ -45,6 +47,7 @@ padding-top: 25px;
 	text-align: center;
 	padding: 2px;
 	margin: 10px;
+	width:100px;
 }
 
 #sushi
@@ -57,6 +60,7 @@ padding-top: 25px;
 	text-align: center;
 	padding: 2px;
 	margin: 10px;
+	width:100px;
 }
 
 
