--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -8,6 +8,7 @@
 h1
 {
 	text-align: center;
+	font-size: 28px;
 }
 .section
 {
@@ -19,22 +20,24 @@ h1
 	border:1px solid black;
 	background-color:#ff8080;
 	position: absolute;
-	top:-8px;
-	right:2px;
+	top:-10px;
+	right:0px;
 	text-align: center;
 	padding: 2px;
 	margin: 10px;
 	width:100px;
+	font-size: 20px;
 
 }
 p
 {
 background-color: gray;
-border: 3px solid black;
-padding:5px;
+border: 1px solid black;
+padding:8px;
 margin: 10px;
-padding-top: 25px;
-height:150px;
+padding-top: 30px;
+height:160px;
+font-size: 16px;
 
 }
 #beef
@@ -42,12 +45,13 @@ height:150px;
 	border:1px solid black;
 	background-color:#ff1a1a;
 	position: absolute;
-	top:-8px;
-	right:2px;
+	top:-10px;
+	right:0px;
 	text-align: center;
 	padding: 2px;
 	margin: 10px;
 	width:100px;
+	font-size: 20px;
 }
 
 #sushi
@@ -55,12 +59,13 @@ height:150px;
 	border:1px solid black;
 	background-color:#ffd9b3;
 	position: absolute;
-	top:-8px;
-	right:2px;
+	top:-10px;
+	right:0px;
 	text-align: center;
 	padding: 2px;
 	margin: 10px;
 	width:100px;
+	font-size: 20px;
 }
 
 
@@ -70,7 +75,7 @@ height:150px;
 {
 	.col-md-4{
 		float:left;
-		width: 33%
+		width: 33.33%
 
 		
 	}
