--- a/module3-website/css/styles.css
+++ b/module3-website/css/styles.css
@@ -5,3 +5,21 @@ body
 	background-color: #61122f;
 	font-family: 'Oxygen', sans-serif;
 }
+
+
+/**Header **/
+#header-nav
+{
+	background-color: #f6b319;
+	border-radius: 0;
+	border: 0;
+}
+
+
+#logo-img
+{
+	background: url('C:/Users/Nikki/coursera-test/module3-website/websitelogo.png') no-repeat;
+	width:150px;
+	height:150px;
+	margin: 10px 15px 10px 0;
+}
