--- a/module3-website/css/styles.css
+++ b/module3-website/css/styles.css
@@ -18,7 +18,7 @@ body
 
 #logo-img
 {
-	background: url('C:/Users/Nikki/coursera-test/module3-website/websitelogo.png') no-repeat;
+	background: url('../websitelogo.png') no-repeat;
 	width:150px;
 	height:150px;
 	margin: 10px 15px 10px 0;
