--- a/module3-website/css/styles.css
+++ b/module3-website/css/styles.css
@@ -18,7 +18,7 @@ body
 
 #logo-img
 {
-	background: url('../websitelogo.png') no-repeat;
+	background: url('../images/websitelogo.png') no-repeat;
 	width:150px;
 	height:150px;
 	margin: 10px 15px 10px 0;
@@ -180,13 +180,13 @@ margin-top: 15px;
 
 #menu-tile
 {
-	background:url('../menu.jpg') no-repeat;
+	background:url('../images/menu.jpg') no-repeat;
 	background-position: center;
 }
 
 #specials-tile
 {
-	background:url('../specials.jpg') no-repeat;
+	background:url('../images/specials.jpg') no-repeat;
 	background-position: center;
 }
 
@@ -204,20 +204,118 @@ margin-top: 15px;
 	opacity: .8;
 }
 
-
-
-
-
-
-
-
 /*End Home Page*/
+
+/* MENU CATEGORIES PAGE */
+
+.category-tile
+{
+	position: relative;
+	border: 2px solid #3F0C1F;
+	overflow: hidden;
+	width: 200px;
+	height: 200px;
+	margin: 0 auto 15px; /*Trick to Center give top and Bottom margin and left and right as auto  and it will center*/
+}
+
+.category-tile span
+{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	background-color: #000;
+	color: #fff;
+	opacity: .8;
+}
+
+.category-tile:hover
+{
+	box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-categories-title + div /*this is used to target menu category and its next sibling that is div*/
+{
+	margin-bottom: 50px;
+}
+
+/*END OF MENU CATEGORIES PAGE*/
+
+/*SINGLE CATEGORY PAGE*/
+
+.menu-item-tile
+{
+	margin-bottom: 25px;
+}
+
+.menu-item-tile hr 
+{
+	width: 80%;
+}
+
+.menu-item-tile .menu-item-price
+{
+	font-size: 1.1em;
+	text-align: right;
+	margin-top: -15px;
+	margin-right: -15px;
+}
+
+.menu-item-tile .menu-item-price span
+{
+	font-size: .6em;
+}
+
+.menu-item-photo
+{
+	position: relative;
+	border: 2px solid #3F0C1F;
+	overflow: hidden;
+	padding:0;
+	margin-right: -15px;
+	margin-left: auto;
+	margin-bottom: 20px;
+	max-width: 250px;
+	
+}
+
+.menu-item-photo div
+{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 80px;
+	background-color: #557c3e;
+	text-align: center;
+}
+
+.menu-item-description
+{
+	padding-right: 30px;
+}
+
+h3.menu-item-title
+{
+	margin: 0 0 10px;
+}
+
+.menu-item-details
+{
+	font-size: .9em;
+	font-style: italic;
+}
+
+/*END SINGLE CATEGORY PAGE*/
+
 /***** Large Devices only *****/
 @media (min-width: 1200px)
 {
 .container .jumbotron
 	{
-		background: url('../restaurant_1200.jpg') center no-repeat;
+		background: url('../images/restaurant_1200.jpg') center no-repeat;
 		height: 675px;
 		
 	}
@@ -228,7 +326,7 @@ margin-top: 15px;
 {
 	/* Header */
 	#logo-img{
-		background: url('../websitelogomedium.png') no-repeat;
+		background: url('../images/websitelogomedium.png') no-repeat;
 		width: 100px;
 		height: 100px;
 		margin: 5px 5px 5px 0;
@@ -237,7 +335,7 @@ margin-top: 15px;
 	/*Home Page*/
 .container .jumbotron
 	{
-		background: url('../restaurant_992.jpg') center no-repeat;
+		background: url('../images/restaurant_992.jpg') center no-repeat;
 		height: 558px;
 		
 	}
@@ -249,7 +347,7 @@ margin-top: 15px;
 {
 .container .jumbotron
 	{
-		background: url('../restaurant_768.jpg') center no-repeat;
+		background: url('../images/restaurant_768.jpg') center no-repeat;
 		height: 432px;
 		
 	}
@@ -334,6 +432,20 @@ margin-top: 15px;
 	margin:0 auto 15px;
 }
 
+.menu-item-photo
+{
+	margin-right: auto;
+}
+.menu-item-tile .menu-item-price
+{
+	text-align: center;
+}
+.menu-item-description
+{
+	text-align: center;
+}
+
+
 }
 
 /***** Super Extra Small devices *****/
@@ -350,5 +462,15 @@ margin-top: 15px;
 	{
 		width: 280px;
 		margin: 0 auto 15px;
+	}
+
+	.col-xxs-12
+	{
+		position: relative;
+		min-height: 1px;
+		padding-right: 15px;
+		padding-left: 15px;
+		float: left;
+		width: 100%;
 	}
 }
