--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,105 +1,123 @@
 *{
 	box-sizing: border-box;
-	font-family: Calibiri;
+	font-family: calibri;
+}
+/**Header **/
+#header-nav
+{
+	background-color: gray;
+	border-radius: 0;
+	border: 0;
+}
+
+h1{
 	font-weight: bold;
+}
+
+.navbar-brand h1 /* Name */
+{
+	
+	color: black;
+	font-size: 32px;
+	font-weight: bold;
+	margin-top: 0;
+	margin-bottom: 0;
+	line-height: .75;
 
 }
 
-h1
+.navbar-brand a:hover , .navbar-brand a:focus 
+{
+	text-decoration: none;
+}
+
+a
+{
+	color: black;
+
+}
+a:hover
+{
+	text-decoration: none;
+	color: black;
+}
+
+a.back
+{
+	color: blue;
+}
+
+#nav-list
+{
+	margin-top: 10px;
+
+}
+
+#nav-list a
+{
+	color: black;
+	text-align: center;
+	background-color: white;
+
+
+}
+
+#nav-list a:hover
+{
+	background: gray;
+	opacity: 1%;
+	
+}
+
+#nav-list a span
+{
+	font-size:1.8em; 
+}
+
+.navbar-header button.navbar-toggle , .navbar-header .icon-bar
+{
+	border:1px solid white;
+}
+
+.navbar-header button.navbar-toggle
+{
+	clear: both;
+	margin-top: -30px;
+}
+
+/*END HEADER*/
+
+
+
+#chicken , #beef , #sushi
 {
 	text-align: center;
-	font-size: 28px;
-}
-.section
-{
-	position: relative;
-}
-
-#chicken
-{
-	border:1px solid black;
-	background-color:#ff8080;
-	position: absolute;
-	top:-10px;
-	right:0px;
-	text-align: center;
-	padding: 2px;
-	margin: 10px;
-	width:100px;
-	font-size: 20px;
+	font-weight: bold;
+	font-size: 24px;
 
 }
+
 p
 {
 background-color: gray;
 border: 1px solid black;
 padding:8px;
 margin: 10px;
-padding-top: 30px;
-height:160px;
+padding-top: 8px;
+
 font-size: 16px;
 
 }
-#beef
-{
-	border:1px solid black;
-	background-color:#ff1a1a;
-	position: absolute;
-	top:-10px;
-	right:0px;
-	text-align: center;
-	padding: 2px;
-	margin: 10px;
-	width:100px;
-	font-size: 20px;
-}
-
-#sushi
-{
-	border:1px solid black;
-	background-color:#ffd9b3;
-	position: absolute;
-	top:-10px;
-	right:0px;
-	text-align: center;
-	padding: 2px;
-	margin: 10px;
-	width:100px;
-	font-size: 20px;
-}
 
 
 
 
-@media(min-width: 992px)
-{
-	.col-md-4{
-		float:left;
-		width: 33.33%
 
-		
-	}
-}
 
-@media(min-width:768px) and (max-width: 991px)
-{
-	.col-sm-6{
-		float:left;
-		width:50%;
-		
-	}
-	.col-sm-12{
-		float:left;
-		width:100%;
-		
-	}
-}
-
-@media(max-width: 767px )
 {
 	.col-xs-12{
 		float:left;
 		width:100%;
+		
 
-	}
 }
